--- a/assets/package.json
+++ b/assets/package.json
@@ -2,11 +2,11 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "deploy": "node_modules/.bin/webpack -p",
+    "build": "node_modules/.bin/webpack -p",
     "watch": "node_modules/.bin/webpack --watch-stdin --progress --color"
   },
   "dependencies": {
-    "bulma": "^0.5.3",
+    "bulma": "^0.6.0",
     "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
@@ -14,14 +14,14 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
-    "babel-preset-env": "^1.6.0",
-    "copy-webpack-plugin": "^4.1.0",
+    "babel-preset-env": "^1.6.1",
+    "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "extract-text-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "uglifyjs-webpack-plugin": "^0.4.6",
-    "webpack": "^3.6.0"
+    "style-loader": "^0.19.0",
+    "uglifyjs-webpack-plugin": "^1.0.1",
+    "webpack": "^3.8.1"
   }
 }
