--- a/assets/package.json
+++ b/assets/package.json
@@ -17,6 +17,7 @@
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.2.0",
     "css-loader": "^0.28.7",
+    "eslint": "^4.9.0",
     "extract-text-webpack-plugin": "^3.0.1",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
