--- a/assets/package.json
+++ b/assets/package.json
@@ -2,11 +2,12 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "build": "node_modules/.bin/webpack",
-    "watch": "node_modules/.bin/webpack --watch-stdin --progress --color"
+    "build": "webpack",
+    "watch": "webpack --watch-stdin --progress --color",
+    "lint": "eslint --quiet"
   },
   "dependencies": {
-    "bulma": "^0.6.0",
+    "bulma": "^0.6.1",
     "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html"
@@ -19,7 +20,7 @@
     "css-loader": "^0.28.7",
     "eslint": "^4.10.0",
     "extract-text-webpack-plugin": "^3.0.2",
-    "node-sass": "^4.5.3",
+    "node-sass": "^4.6.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "uglifyjs-webpack-plugin": "^1.0.1",
