--- a/assets/package.json
+++ b/assets/package.json
@@ -7,8 +7,9 @@
     "lint": "eslint --quiet"
   },
   "dependencies": {
+    "@fortawesome/fontawesome": "^1.1.3",
+    "@fortawesome/fontawesome-free-solid": "^5.0.6",
     "bulma": "^0.6.2",
-    "font-awesome": "^4.7.0",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "turbolinks": "^5.1.1"
@@ -18,12 +19,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "copy-webpack-plugin": "^4.3.1",
-    "css-loader": "^0.28.8",
-    "eslint": "^4.15.0",
+    "css-loader": "^0.28.9",
+    "eslint": "^4.16.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.19.1",
+    "style-loader": "^0.20.1",
     "uglifyjs-webpack-plugin": "^1.1.6",
     "webpack": "^3.10.0"
   }
