--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,3 +1,15 @@
 {
-  "presets": ["env"]
+  "presets": [
+    [
+      "env", {
+        "targets": {
+          "browsers": [
+            ">0.25%",
+            "not ie 11",
+            "not op_mini all"
+          ]
+        }
+      }
+    ]
+  ]
 }
