--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -20,6 +20,7 @@
     "prefer-const": "warn",
     "quotes": ["error", "single"],
     "semi": ["error", "never"],
+    "space-before-blocks": ["error", "always"],
     "space-before-function-paren": ["error", "always"],
     "space-infix-ops": "error",
     "spaced-comment": ["error", "always"]
