Rename fixtures (again)

--- a/.projections.json
+++ b/.projections.json
@@ -73,6 +73,14 @@
     "type": "tsupport"
   },
 
+  "test/support/helpers/fixture_helper.ex": {
+    "type": "fixtures"
+  },
+
+  "test/support/fixtures/*_fixture.ex": {
+    "type": "fixtures"
+  },
+
   "lib/ptr_web/templates/*.eex": {
     "type": "template"
   },
