--- a/assets/.babelrc
+++ b/assets/.babelrc
@@ -1,7 +1,7 @@
 {
   "presets": [
     [
-      "@babel/env", {
+      "@babel/preset-env", {
         "targets": {
           "browsers": [
             ">0.25%",
@@ -11,5 +11,6 @@
         }
       }
     ]
-  ]
+  ],
+  "plugins": ["@babel/plugin-proposal-class-properties"]
 }
