Missed format cohesion on deliver config

--- a/.deliver/config
+++ b/.deliver/config
@@ -48,8 +48,8 @@ post_upgrade_release() {
   symlink_static
 }
 
-symlink_static(){
-  status "Running post update symlink"
+symlink_static() {
+  status "Running post update symlink!"
   __remote "
     ln -sfn $DELIVER_TO/$APP/lib/$APP$RELEASE-$VERSION/priv/static $DELIVER_TO/$APP/static
   "
