Use -p on webpack build

--- a/assets/package.json
+++ b/assets/package.json
@@ -2,7 +2,7 @@
   "repository": {},
   "license": "MIT",
   "scripts": {
-    "build": "webpack",
+    "build": "webpack -p",
     "watch": "webpack --watch-stdin --progress --color",
     "lint": "eslint --quiet"
   },
