New distillery version + Cache layers on Docker

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,13 @@
+.dockerignore
 .git
+.gitignore
 _build/
 assets/node_modules/
 deps/
 !deps/phoenix
 !deps/phoenix_html
 doc/
+Dockerfile
 priv/static/*
 erl_crash.dump
 *.ez
