--- a/assets/.eslintrc.json
+++ b/assets/.eslintrc.json
@@ -13,6 +13,7 @@
     "array-bracket-spacing": ["error", "never"],
     "brace-style": ["error", "1tbs", {"allowSingleLine": true}],
     "curly": ["error", "all"],
+    "eqeqeq": ["error", "always"],
     "indent": ["error", 2],
     "keyword-spacing": ["error", {"before": true, "after": true}],
     "linebreak-style": ["error", "unix"],
